--- a/index.html
+++ b/index.html
@@ -57,50 +57,78 @@
                 <div class="publication-item">
                     <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player
                             Attitudes in Alternate Climate Scenarios Through a ChatGPT-Driven Text Adventure</a></h3>
-                    <p>Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>,Jussi Holopainen, Ray
+                    <p>Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>, Jussi Holopainen, Ray
                         LC† </p>
                     <p>CHI Conference on Human Factors in Computing Systems 2024</p>
                     <div class="publication-links">
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">[PDF]</a>
-                        <a href="https://github.com/latishab/eternagram"">[Project Page]</a>
+                        <a href="https://github.com/latishab/eternagram">[Project Page]</a>
                     </div>
                 </div>
                 <!-- 可以添加更多的 publication-item -->
             </div>
         </section>
-        
+
+        <section id="news">
+            <h2>/News</h2>
+            <div class="news-list">
+                <div class="news-item">
+                    <p><strong>2024.06:</strong> I will be starting my internship at <a
+                            href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July.
+                        Would love to contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
+                </div>
+                <div class="news-item">
+                    <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at CHI 2024! See you in
+                        Hawai'i!</p>
+                </div>
+                <div class="news-item">
+                    <p><strong>2024.01:</strong> My Co-First Author Paper: 'Eternagram: Probing Player Attitudes Towards
+                        Climate Change Using a ChatGPT-driven Text-based Adventure.' Has been accepted to <a
+                            href="https://chi2024.acm.org/">
+                            CHI Conference
+                            on Human Factors in Computing Systems </a>.
+                        I am thrilled to share our findings and discuss the implications of using interactive games for
+                        climate awareness.</p>
+                </div>
+                <div class="news-item">
+                    <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
+                </div>
+                <div class="news-item">
+                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a></ad> this
+                        September!</p>
+                </div>
+            </div>
+        </section>
 
     </div>
-    <div class=" contact-info">
-                            <div class="location">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <span>CA, San Diego</span>
-                            </div>
-                            <div class="affiliation">
-                                <i class="fas fa-university"></i>
-                                <span>University of California, San Diego</span>
-                            </div>
-                            <div class="social-links">
-                                <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
-                                <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
-                                    title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                                <a href="https://github.com/Carolzhangzz" title="Github"><i
-                                        class="fab fa-github"></i></a>
-                                <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i
-                                        class="fab fa-linkedin"></i></a>
-                                <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
-                                        class="fab fa-twitter"></i></a>
-                            </div>
-                    </div>
-                    <footer>
-                        <p> For more information: </p>
-                        <p>
-                             <a href="https://drive.google.com/file/d/1iCes8hiATQl0lANcCq8IDKt_NeGUzh_S/view"><strong>CV</strong></a> |
-                             <a href="#"><strong>Research Statement </strong> </a> 
-                        </p>
-                        <p>© 2024 Qinshi 'Carol' Zhang.</p>
-                    </footer>
-                    <script src="./script.js"></script>
+    <div class="contact-info">
+        <div class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            <span>CA, San Diego</span>
+        </div>
+        <div class="affiliation">
+            <i class="fas fa-university"></i>
+            <span>University of California, San Diego</span>
+        </div>
+        <div class="social-links">
+            <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i
+                    class="fas fa-graduation-cap"></i></a>
+            <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
+                    class="fab fa-twitter"></i></a>
+        </div>
+    </div>
+    <footer>
+        <p>For more information:</p>
+        <p>
+            <a href="https://drive.google.com/file/d/1iCes8hiATQl0lANcCq8IDKt_NeGUzh_S/view"><strong>CV</strong></a> |
+            <a href="#"><strong>Research Statement</strong></a>
+        </p>
+        <p>© 2024 Qinshi 'Carol' Zhang.</p>
+    </footer>
+    <script src="./script.js"></script>
 </body>
 
 </html>
