--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
                 <a href="./Portfolio.html">Portfolio</a>
             </div>
         </nav>
-        <div class="main-content" id="main-content">
 
+        <div class="main-content" id="main-content">
             <div class="text-content">
                 <h1>Hi, I am Carol Zhang</h1>
                 <p>An HCI master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a>at HK
                     CityU on AI for Social Good, resulted a co-first authored paper
                     published at <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">CHI 2024</a>.
-
                     <br><br>
-
                     I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                     Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
                     another degree in Computer and Information
@@ -37,14 +35,11 @@
                     Dr. Lin Xiang and Dr. Haijun Tao.
                 </p>
             </div>
-            <!-- <a href="#" class="button">Get started with Devin →</a> -->
-
         </div>
-        <!-- 新增的部分 -->
+
         <section id="research-interests">
             <h2>/Research Interests</h2>
-            <p>My research interests lie in <a>Human-AI Interaction for Social Impact
-                </a>and<a> AI For Social Good</a>,
+            <p>My research interests lie in <a>Human-AI Interaction for Social Impact</a> and <a>AI For Social Good</a>,
                 especially the societal impact of technologies, surrounding sustainability, privacy leakage, and social
                 justice concerns in general.</p>
         </section>
@@ -52,7 +47,6 @@
         <section id="publications">
             <h2>/publications</h2>
             <div class="publications-list">
-                <!-- // Notes: * indicates equal contribution. † indicates corresponding Author. -->
                 <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
                 <div class="publication-item">
                     <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player
@@ -99,8 +93,8 @@
                 </div>
             </div>
         </section>
-
     </div>
+
     <div class="contact-info">
         <div class="location">
             <i class="fas fa-map-marker-alt"></i>
@@ -120,6 +114,7 @@
                     class="fab fa-twitter"></i></a>
         </div>
     </div>
+
     <footer>
         <p>For more information:</p>
         <p>
