--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
             <div class="logo">Qinshi (Carol) Zhang</div>
             <div class="nav-links">
                 <a href="./index.html" class="active">Home</a>
-                <!-- <a href="./blog.html">Blog</a> -->
                 <a href="./Portfolio.html">Portfolio</a>
             </div>
         </nav>
-
         <div class="main-content" id="main-content">
             <div class="text-content">
-                <h1>Hi, I am Carol Zhang</h1>
+                <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
                 <p>An HCI master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a>at HK
                     CityU on AI for Social Good, resulted a co-first authored paper
@@ -36,14 +34,12 @@
                 </p>
             </div>
         </div>
-
         <section id="research-interests">
             <h2>/Research Interests</h2>
             <p>My research interests lie in <a>Human-AI Interaction for Social Impact</a> and <a>AI For Social Good</a>,
                 especially the societal impact of technologies, surrounding sustainability, privacy leakage, and social
                 justice concerns in general.</p>
         </section>
-
         <section id="publications">
             <h2>/publications</h2>
             <div class="publications-list">
@@ -59,10 +55,8 @@
                         <a href="https://github.com/latishab/eternagram">[Project Page]</a>
                     </div>
                 </div>
-                <!-- 可以添加更多的 publication-item -->
             </div>
         </section>
-
         <section id="news">
             <h2>/News</h2>
             <div class="news-list">
@@ -88,13 +82,12 @@
                     <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
                 </div>
                 <div class="news-item">
-                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a></ad> this
+                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a> this
                         September!</p>
                 </div>
             </div>
         </section>
     </div>
-
     <div class="contact-info">
         <div class="location">
             <i class="fas fa-map-marker-alt"></i>
@@ -114,7 +107,6 @@
                     class="fab fa-twitter"></i></a>
         </div>
     </div>
-
     <footer>
         <p>For more information:</p>
         <p>
