--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
             <div class="text-content">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
                 <p>An HCI master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
-                    I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a>at HK
-                    CityU on AI for Social Good, resulted a co-first authored paper
+                    I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
+                    CityU on AI for Social Good, resulting in a co-first authored paper
                     published at <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">CHI 2024</a>.
                     <br><br>
                     I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                     Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
-                    another degree in Computer and Information
-                    Science at <a href="https://www.aut.ac.nz/">Auckland University of Technology (AUT)</a>, advised by
+                    another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland University of Technology (AUT)</a>, advised by
                     Dr. Lin Xiang and Dr. Haijun Tao.
                 </p>
             </div>
@@ -41,7 +40,7 @@
                 justice concerns in general.</p>
         </section>
         <section id="publications">
-            <h2>/publications</h2>
+            <h2>/Publications</h2>
             <div class="publications-list">
                 <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
                 <div class="publication-item">
