--- a/Portfolio.html
+++ b/Portfolio.html
@@ -35,13 +35,12 @@
                 <div class="tags">
                     <span class="tag">GPT-4</span>
                     <span class="tag">Climate Change</span>
+                    <span class="tag">Text Adventure Game</span>
                     <span class="tag">Social Good</span>
                 </div>
                 <div class="portfolio-links">
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
-                    <a href="https://github.com/latishab/eternagram" class="button">View Code</a>
-                    <a href="https://drive.google.com/file/d/1XllwNe9dRExplsAWpIiAOuk9snLeT8Wd/view" class="button">View
-                        Demo</a>
+                    <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
                 </div>
             </div>
 
