--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
                 <p>An HCI master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
-                    CityU on AI for Social Good, resulting in a co-first authored paper
-                    published at <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">CHI 2024</a>.
+                    CityU on AI for Social Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
+                    published at CHI 2024.
                     <br><br>
                     I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                     Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
@@ -65,7 +65,8 @@
                         Would love to contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
                 </div>
                 <div class="news-item">
-                    <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at CHI 2024! See you in
+                    <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at <a
+                        href="https://chi2024.acm.org/">CHI 2024</a>! See you in
                         Hawai'i!</p>
                 </div>
                 <div class="news-item">
