--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Carol (Qinshi) Zhang</title>
-    <link rel="stylesheet" href="./portfolio.css">
+   <link rel="stylesheet" href="./portfolio.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
@@ -43,7 +43,7 @@
                     <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
                 </div>
             </div>
-
+<!-- 
             <div class="portfolio-item">
                 <h3>Online NBA</h3>
                 <p>Yuxin Du (Game Design), Qinshi Zhang (Web Dev), Yiru Zhu (Document)</p>
@@ -57,9 +57,9 @@
                     <a href="https://drive.google.com/file/d/1vWfJGzW90GNjGZceKtLyTMvGLbHAOANz/view" class="button">View
                         Demo</a>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="portfolio-item">
+            <!-- <div class="portfolio-item">
                 <h3>Smart Picking Ball Robot</h3>
                 <p>Qinshi Zhang and Yiru Zhu (course report only), Haiwei Yin, Yaowu Sun, Chuhui Wang.</p>
                 <img src="./images/pickball.png" alt="Project 3 Image">
@@ -77,9 +77,9 @@
                     <a href="https://drive.google.com/file/d/158vuj3G6XerqFi65eooXyQ_KpDwgxDJe/view" class="button">View
                         Demo</a>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="portfolio-item">
+            <!-- <div class="portfolio-item">
                 <h3>Video Analysis Framework Based on Gstreamer</h3>
                 <p>Qinshi Zhang (as leader), Yingying Huang, Weiyi Ren, Yiru Zhu, Shimei Meng.</p>
                 <img src="./images/poster.png" alt="Project 4 Image">
@@ -100,7 +100,7 @@
                     <a href="https://drive.google.com/file/d/1O-6ghjR7rW2qSQ2WA35l5QUtQN_dQb3u/view" class="button">View
                         Demo</a>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <section id="portfolio">
