--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol (Qinshi) Zhang</title>
+    <title>Carol Zhang</title>
     <link rel="stylesheet" href="./style.css">
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
@@ -15,13 +16,13 @@
             <div class="logo">Qinshi (Carol) Zhang</div>
             <div class="nav-links">
                 <a href="./index.html" class="active">Home</a>
-                <a href="./Portfolio.html">Portfolio</a>
+                <!-- <a href="./Portfolio.html">Portfolio</a> -->
             </div>
         </nav>
         <div class="main-content" id="main-content">
             <div class="text-content">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
-                <p>An HCI master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
+                <p>An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
                     CityU on AI for Social Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
                     published at CHI 2024.
@@ -55,6 +56,28 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section id="portfolio">
+            <h2>/portfolio</h2>
+            <p>Here are some of the projects I've worked on:</p>
+            <div class="portfolio-item">
+                <h3>Eternagram</h3>
+                <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
+                <img src="./images/Etergram.png" alt="Project 1 Image">
+                <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
+                    distant world by conversing with Ryno through Eternagram, they discover ways to move around in the
+                    world by telling Ryno, and learn about the mysteries of the world.</p>
+                <div class="tags">
+                    <span class="tag">GPT-4</span>
+                    <span class="tag">Climate Change</span>
+                    <span class="tag">Text Adventure Game</span>
+                    <span class="tag">Social Good</span>
+                </div>
+                <div class="portfolio-links">
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
+                    <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
+                </div>
+          </div>
         </section>
         <section id="news">
             <h2>/News</h2>
