--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol Zhang</title>
     <link rel="stylesheet" href="./style.css">
-   
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
@@ -14,22 +14,48 @@
     <div class="container">
         <nav>
             <div class="logo">Qinshi (Carol) Zhang</div>
-            <div class="nav-links">
+            <!-- <div class="nav-links">
+                
                 <a href="./index.html" class="active">Home</a>
-                <!-- <a href="./Portfolio.html">Portfolio</a> -->
+                 <a href="./Portfolio.html">Portfolio</a> 
+            </div> -->
+            <div class="contact-info">
+
+                <div class="social-links">
+                    <!-- <p>Contact Info</p> -->
+                    <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
+                        title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
+                            class="fab fa-twitter"></i></a>
+                </div>
             </div>
         </nav>
+
+        <div class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            <span>CA, San Diego</span>
+        </div>
+        <div class="affiliation">
+            <i class="fas fa-university"></i>
+            <span>University of California, San Diego</span>
+        </div>
         <div class="main-content" id="main-content">
+
             <div class="text-content">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
                 <p>An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
-                    CityU on AI for Social Good, resulting in a <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
+                    CityU on AI for Social Good, resulting in a <a
+                        href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
                     published at CHI 2024.
                     <br><br>
                     I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                     Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
-                    another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland University of Technology (AUT)</a>, advised by
+                    another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
+                        University of Technology (AUT)</a>, advised by
                     Dr. Lin Xiang and Dr. Haijun Tao.
                 </p>
             </div>
@@ -77,7 +103,7 @@
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
                     <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
                 </div>
-          </div>
+            </div>
         </section>
         <section id="news">
             <h2>/News</h2>
@@ -89,7 +115,7 @@
                 </div>
                 <div class="news-item">
                     <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at <a
-                        href="https://chi2024.acm.org/">CHI 2024</a>! See you in
+                            href="https://chi2024.acm.org/">CHI 2024</a>! See you in
                         Hawai'i!</p>
                 </div>
                 <div class="news-item">
@@ -102,33 +128,16 @@
                         climate awareness.</p>
                 </div>
                 <div class="news-item">
-                    <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
+                    <p><strong>2023.11:</strong> I will be serving as a Volunteer at <a
+                            href="https://chchi2023.icachi.org/">Chinese CHI 2023</a>.</p>
                 </div>
                 <div class="news-item">
-                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a> this
+                    <p><strong>2023.07:</strong> I will be starting a research-based program at <a
+                            href="https://www.uci.edu/">UC Irvine</a> this
                         September!</p>
                 </div>
             </div>
         </section>
-    </div>
-    <div class="contact-info">
-        <div class="location">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>CA, San Diego</span>
-        </div>
-        <div class="affiliation">
-            <i class="fas fa-university"></i>
-            <span>University of California, San Diego</span>
-        </div>
-        <div class="social-links">
-            <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
-            <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i
-                    class="fas fa-graduation-cap"></i></a>
-            <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
-                    class="fab fa-twitter"></i></a>
-        </div>
     </div>
     <footer>
         <p>For more information:</p>
