--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
     <div class="container">
         <nav>
             <div class="logo">Qinshi (Carol) Zhang</div>
-            <!-- <div class="nav-links">
-                
-                <a href="./index.html" class="active">Home</a>
-                 <a href="./Portfolio.html">Portfolio</a> 
-            </div> -->
-            <div class="contact-info">
-
-                <div class="social-links">
-                    <!-- <p>Contact Info</p> -->
-                    <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
-                    <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
-                        title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
-                            class="fab fa-twitter"></i></a>
-                </div>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#research-interests">Research Interests</a>
+                <a href="#publications">Publications</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#news">News</a>
             </div>
         </nav>
 
@@ -42,9 +31,21 @@
             <i class="fas fa-university"></i>
             <span>University of California, San Diego</span>
         </div>
+        <div class="contact-info">
+            <div class="social-links">
+                <!-- <p>Contact Info</p> -->
+                <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"
+                    title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/Carol_Zhang1027" title="X (formerly Twitter)"><i
+                        class="fab fa-twitter"></i></a>
+            </div>
+        </div>
         <div class="main-content" id="main-content">
 
-            <div class="text-content">
+            <div class="text-content" id="home">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
                 <p>An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
