--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol Zhang</title>
     <link rel="stylesheet" href="./style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
@@ -47,7 +47,10 @@
 
             <div class="text-content" id="home">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
-                <p>An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
+              
+                <p>  <i class="fas fa-atom"></i>  I am looking for for PhD Positions in Fall 2025.
+                    <br><br>
+                    An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
                     CityU on AI for Social Good, resulting in a <a
                         href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
