--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="text-content" id="home">
                 <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
               
-                <p>  <i class="fas fa-atom"></i>  I am looking for for PhD Positions in Fall 2025.
+                <p>  <i class="fas fa-atom"></i>  I am looking for PhD Positions in Fall 2025.
                     <br><br>
                     An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
