--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             </div>
         </div>
         <div class="main-content" id="main-content">
-
+            <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo desktop-only">
             <div class="text-content" id="home">
-                <h1 class="desktop-only">Hi, I am Carol Zhang</h1>
+
+               
               
                 <p>  <i class="fas fa-atom"></i>  I am looking for PhD Positions in Fall 2025.
                     <br><br>
@@ -83,6 +84,20 @@
                     <div class="publication-links">
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">[PDF]</a>
                         <a href="https://github.com/latishab/eternagram">[Project Page]</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="publications">
+            <div class="publications-list-2">
+                <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
+                <div class="publication-item">
+                    <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
+                    <p>Under Review for UIST'24 Demo</p>
+                    <div class="publication-links">
+                        <a href="">[Arxiv]</a>
+                        <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
                     </div>
                 </div>
             </div>
