--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="publications-list-2">
                 <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
                 <div class="publication-item">
-                    <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <h3><a href="">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
                     <p>Under Review for UIST'24 Demo</p>
                     <div class="publication-links">
