--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <footer>
         <p>For more information:</p>
         <p>
-            <a href="https://drive.google.com/file/d/1iCes8hiATQl0lANcCq8IDKt_NeGUzh_S/view"><strong>CV</strong></a> |
+            <a href="https://drive.google.com/file/d/1pHw8-Ny-SyjtC1o60xW_4Zruti8-xOaI/view?usp=sharing"><strong>CV</strong></a> |
             <a href="#"><strong>Research Statement</strong></a>
         </p>
         <p>© 2024 Qinshi 'Carol' Zhang.</p>
