--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         </section>
         <section id="publications">
             <div class="publications-list-2">
-                <p>Notes: * indicates equal contribution. † indicates corresponding Author.</p>
                 <div class="publication-item">
                     <h3><a href="">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
@@ -107,6 +106,22 @@
             <p>Here are some of the projects I've worked on:</p>
             <div class="portfolio-item">
                 <h3>Eternagram</h3>
+                <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
+                <img src="./images/Etergram.png" alt="Project 1 Image">
+                <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
+                    distant world by conversing with Ryno through Eternagram, they discover ways to move around in the
+                    world by telling Ryno, and learn about the mysteries of the world.</p>
+                <div class="tags">
+                    <span class="tag">GPT-4</span>
+                    <span class="tag">Climate Change</span>
+                    <span class="tag">Text Adventure Game</span>
+                    <span class="tag">Social Good</span>
+                </div>
+                <div class="portfolio-links">
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
+                    <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
+                </div>
+                 <h3>Eternagram</h3>
                 <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
                 <img src="./images/Etergram.png" alt="Project 1 Image">
                 <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
