--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
                     <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
                 </div>
-                 <h3>Eternagram</h3>
+
+                 <!-- <h3>Eternagram</h3>
                 <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
                 <img src="./images/Etergram.png" alt="Project 1 Image">
                 <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
@@ -136,7 +137,7 @@
                 <div class="portfolio-links">
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
                     <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
-                </div>
+                </div> -->
             </div>
         </section>
         <section id="news">
