--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               
                 <p>  <i class="fas fa-atom"></i>  I am looking for PhD Positions in Fall 2025.
                     <br><br>
-                    Hi, I am Carol Zhang. An CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
+                    Hi, I am Carol Zhang. A CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
                     CityU on AI for Social Good, resulting in a <a
                         href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
