--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="publications">
             <div class="publications-list-2">
                 <div class="publication-item">
-                    <h3><a href="">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <h3><a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
                     <p>Under Review for UIST'24 Demo</p>
                     <div class="publication-links">
