--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo desktop-only">
             <div class="text-content" id="home">
 
-               
-              
-                <p>  <i class="fas fa-atom"></i>  I am looking for PhD Positions in Fall 2025.
+
+
+                <p> <i class="fas fa-atom"></i> I am looking for PhD Positions in Fall 2025.
                     <br><br>
-                    Hi, I am Carol Zhang. A CS master student at UCSD, working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
+                    Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
+                        href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
                     I also have worked with <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK
                     CityU on AI for Social Good, resulting in a <a
                         href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
@@ -88,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section id="publications">
+        <!-- <section id="publications">
             <div class="publications-list-2">
                 <div class="publication-item">
                     <h3><a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
@@ -100,7 +101,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="portfolio">
             <h2>/portfolio</h2>
             <p>Here are some of the projects I've worked on:</p>
@@ -122,22 +123,21 @@
                     <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
                 </div>
 
-                 <!-- <h3>Eternagram</h3>
-                <p>Latisha Besariani Hendra (Back-End), Qinshi Zhang (Front-End), Suifang Zhou (Game Design)</p>
-                <img src="./images/Etergram.png" alt="Project 1 Image">
-                <p>ETERNAGRAM is a text-based adventure game, as players slowly begin to unravel the stories in the
-                    distant world by conversing with Ryno through Eternagram, they discover ways to move around in the
-                    world by telling Ryno, and learn about the mysteries of the world.</p>
+                <h3>Frontend Diffusion</h3>
+                <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
+                <img src="./images/FD.png" alt="Project 1 Image">
+                <p>Frontend Diffusion is an end-to-end LLM-powered tool that generates high-quality websites from user
+                    sketches. Users can input a rough sketch on the canvas, which the system then transforms into a
+                    high-quality website page. You could use it to generate websites from sketch.</p>
                 <div class="tags">
-                    <span class="tag">GPT-4</span>
-                    <span class="tag">Climate Change</span>
-                    <span class="tag">Text Adventure Game</span>
-                    <span class="tag">Social Good</span>
+                    <span class="tag">Claude</span>
+                    <span class="tag">Frontend Code Generation</span>
+                    <span class="tag">Prompt Engineering</span>
                 </div>
                 <div class="portfolio-links">
-                    <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
-                    <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
-                </div> -->
+                    <a href="./PDF/Frontend_Diffusion_UIST_2024.pdf" class="button">View Paper</a>
+                    <a href="https://github.com/Carolzhangzz/frontendiffusion" class="button">View Demo</a>
+                </div>
             </div>
         </section>
         <section id="news">
@@ -177,7 +177,9 @@
     <footer>
         <p>For more information:</p>
         <p>
-            <a href="https://drive.google.com/file/d/1pHw8-Ny-SyjtC1o60xW_4Zruti8-xOaI/view?usp=sharing"><strong>CV</strong></a> |
+            <a
+                href="https://drive.google.com/file/d/1pHw8-Ny-SyjtC1o60xW_4Zruti8-xOaI/view?usp=sharing"><strong>CV</strong></a>
+            |
             <a href="#"><strong>Research Statement</strong></a>
         </p>
         <p>© 2024 Qinshi 'Carol' Zhang.</p>
