--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <span class="tag">Prompt Engineering</span>
                 </div>
                 <div class="portfolio-links">
-                    <a href="./PDF/Frontend_Diffusion_UIST_2024.pdf" class="button">View Paper</a>
+                    <a href="https://arxiv.org/abs/2408.00778" class="button">View Paper</a>
                     <a href="https://github.com/Carolzhangzz/frontendiffusion" class="button">View Demo</a>
                 </div>
             </div>
