--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                 </div>
             </div>
         </section>
-        <!-- <section id="publications">
+        <section id="publications">
             <div class="publications-list-2">
                 <div class="publication-item">
-                    <h3><a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
-                    <p>Under Review for UIST'24 Demo</p>
+                    <p>Preprint</p>
                     <div class="publication-links">
                         <a href="">[Arxiv]</a>
                         <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <section id="portfolio">
             <h2>/portfolio</h2>
             <p>Here are some of the projects I've worked on:</p>
