--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <section id="publications">
             <div class="publications-list-2">
                 <div class="publication-item">
-                    <h3><a href="https://arxiv.org/pdf/2408.00778">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
                     <p>Preprint</p>
                     <div class="publication-links">
-                        <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">[Arxiv]</a>
+                        <a href="https://arxiv.org/abs/2408.00778">[Arxiv]</a>
                         <a href="https://github.com/Carolzhangzz/frontendiffusion?tab=readme-ov-file">[Project Page]</a>
                     </div>
                 </div>
