--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-                <p> <i class="fas fa-atom"></i> I am looking for PhD Positions in Fall 2025.
+                <p></i>  Looking for PhD Positions in Fall 2025.
                     <br><br>
                     Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
                         href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
