--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     sketches. Users can input a rough sketch on the canvas, which the system then transforms into a
                     high-quality website page. You could use it to generate websites from sketch.</p>
                 <div class="tags">
-                    <span class="tag">Claude</span>
+                    <span class="tag">Claude Sonnet</span>
                     <span class="tag">Frontend Code Generation</span>
                     <span class="tag">Prompt Engineering</span>
                 </div>
