--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-                <p></i>  Looking for PhD Positions in Fall 2025.
+                <p></i> Looking for PhD Positions in Fall 2025.
                     <br><br>
                     Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
                         href="https://spdow.ucsd.edu/">Prof. Steven Dow</a>.
@@ -92,7 +92,8 @@
         <section id="publications">
             <div class="publications-list-2">
                 <div class="publication-item">
-                    <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
+                    <h3><a href="https://arxiv.org/abs/2408.00778">Frontend Diffusion: Exploring Intent-Based User
+                            Interfaces through Abstract-to-Detailed Task Transitions</a></h3>
                     <p><strong>Qinshi Zhang</strong>, Latisha Besariani Hendra, Mohan Chi, Zijian Ding†</p>
                     <p>Preprint</p>
                     <div class="publication-links">
@@ -145,20 +146,18 @@
             <div class="news-list">
                 <div class="news-item">
                     <p><strong>2024.06:</strong> I will be starting my internship at <a
-                            href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July.
-                        Would love to contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
+                            href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July. Excited to
+                        contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!</p>
                 </div>
                 <div class="news-item">
                     <p><strong>2024.01:</strong> I will be serving as a Student Volunteer at <a
-                            href="https://chi2024.acm.org/">CHI 2024</a>! See you in
-                        Hawai'i!</p>
+                            href="https://chi2024.acm.org/">CHI 2024</a>! See you in Hawai'i!</p>
                 </div>
                 <div class="news-item">
                     <p><strong>2024.01:</strong> My Co-First Author Paper: 'Eternagram: Probing Player Attitudes Towards
                         Climate Change Using a ChatGPT-driven Text-based Adventure.' Has been accepted to <a
                             href="https://chi2024.acm.org/">
-                            CHI Conference
-                            on Human Factors in Computing Systems </a>.
+                            CHI Conference on Human Factors in Computing Systems </a>.
                         I am thrilled to share our findings and discuss the implications of using interactive games for
                         climate awareness.</p>
                 </div>
