--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
         <div class="main-content" id="main-content">
             <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo desktop-only">
             <div class="text-content" id="home">
-
-
-
                 <p></i> Looking for PhD Positions in Fall 2025.
                     <br><br>
                     Hi, I am Carol Zhang. A CS master student at UCSD, working with <a
@@ -121,7 +118,7 @@
                 </div>
                 <div class="portfolio-links">
                     <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850" class="button">View Paper</a>
-                    <a href="https://github.com/latishab/eternagram" class="button">View Demo</a>
+                    <!-- <a href="https://github.com/latishab/eternagram" class="button">View Demo</a> -->
                 </div>
 
                 <h3>Frontend Diffusion</h3>
